# sqlx-db-cli

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  test.sql  test.sqlite
src/: lib.rs  main.rs  mysql.rs  postgres.rs  sqlite.rs  template.rs
