[package]
name = "sqlx-db-cli"
version = "0.4.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.3.3", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
tera = "1.19.0"
tokio = { version = "1.28.2", features = ["full"] }
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-native-tls",
  "all-databases",
] }
heck = "0.5.0"
anyhow = "1.0.72"
